--- a/README
+++ b/README
@@ -22,11 +22,15 @@ Once it is up and running, you can ssh into the vm
 
 You can connect to mysql without ssh'ing into the box from your mac host:
     > mysql -uroot -h localhost --protocol=TCP -P 33066
-If that doesnt work, you might need to manually edit the my.cnf file
+TODO: If that doesnt work, you might need to manually edit the my.cnf file
     > vagrant ssh
     > sudo vim /etc/mysql/my.cnf
     > comment out the lines that start with "bind-address" and "skip-external-locking"
     > sudo /etc/init.d/mysql restart
+
+TODO: You need to fix an issue with apache serving shared static files (see: http://geoffmcqueen.com/2011/08/12/solved-apache-serving-corrupted-files-via-virtualbox-vboxfs-shares/)
+    > vagrant ssh
+    > sudo echo "EnableSendfile Off" >> /etc/apache2/apache2.conf
 
 Shared directories from your Mac host to the vagrant box include:
     - ~/webserver => /vagrant
